<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/steps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepsLbl" android:textSize="50sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/steps_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepsValue" android:textSize="35sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/stepsLbl"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:text="@string/steps_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distanceValue" android:textSize="35sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="240dp"
            android:layout_height="54dp"
            android:layout_above="@+id/btnStop"
            android:background="@drawable/btn_background"
            android:text="@string/counter_start"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/distanceValue"
            app:layout_constraintHorizontal_bias="0.477"
    />

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnStop"
            android:layout_width="240dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/counter_stop"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toBottomOf="@+id/btnStart"/>
    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSecond"
            android:layout_width="240dp"
            android:layout_height="54dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="Last saved steps"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            tools:layout_editor_absoluteY="626dp"
            app:layout_constraintTop_toBottomOf="@+id/btnStop"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:progress="0" android:max="10000" android:progressTint="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="Daily recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stepsValue" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>